--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -1,15 +1,5 @@
 ## Center für Digitale Systeme, Freie Universität Berlin
-
-## Versionierung 
-
-Um im Sinne guter wissenschaftlicher Praxis sicherzustellen, dass Artikel nach der Publi­kation nicht verändert werden, wurde OJS so erweitert, dass ab OJS 3.2 bereits publizierte Artikel per Knopfdruck mit einer neuen Version versehen werden können. Diese kann zunächst bearbeitet und anschließend veröffentlicht werden. Alte Versionen werden auf der Artikelseite als Liste angezeigt. Der im Projekt entwickelte Code wird nach dem Release von OJS 3.2.0 in den Masterbranch übernommen. Zusätzlich wurden eine technische Dokumentation, eine englischsprachige Nutzer/innenanleitung und eine deutsche Handreichung erstellt. 
-* Code (Pull requests): https://github.com/pkp/ojs/pull/2103 (OJS),  https://github.com/pkp/pkp-lib/pull/4007 (pkp-lib) 
-* Technische Dokumentation und englische Handreichung: https://github.com/ojsde/versioning/wiki 
-* Handreichung:    https://www.ojs-de.net/support/anleitungen/artikelversionierung
-
-Verbesserung der E-Mail-Verwaltung: In OJS verfügbare und für einzelne Zeitschriften anpassbare Mail-Vorlagen dienen der Erleichterung der Kommunikation zwischen allen im Publikationsprozess beteiligten Akteur*innen. Die bereits in der ersten Projektphase getätigte Umsetzung einer vereinfachten Export-Import-Funktion schien angesichts von Nutzer*innenrückmeldungen nicht ausreichend. Deshalb wurde die Verwaltung von E-Mail-Vorlagen in OJS 3.2 zusätzlich durch die Einführung von Filterfunktionen wesentlich verbessert. Der Code wird ab Release OJS 3.2.0 in den Masterbranch übernommen werden.
-Code: https://github.com/pkp/ojs/pull/2345
-Handreichung: https://www.ojs-de.net/support/anleitungen/e-mail-vorlagen-anpassen
+ *Dr. Katja Mruck, Center für Digitale Systeme, Freie Universität Berlin*
 
 
 ### OpenAIRE-Kompatibilität
@@ -23,12 +13,28 @@ Automatische Meldung an die Deutsche Nationalbibliothek: Mithilfe des DNB-Export
 * Code: https://github.com/bozana/dnb/tree/ojs-stable-2_4_8 und https://github.com/bozana/dnb/tree/ojs-stable-3_0_2 
 * Handreichung: https://www.ojs-de.net/support/anleitungen/dnb-plugin
 
+## Versionierung
+ 
 
- *Dr. Katja Mruck, Center für Digitale Systeme, Freie Universität Berlin*
+Um im Sinne guter wissenschaftlicher Praxis sicherzustellen, dass Artikel nach der Publi­kation nicht verändert werden, wurde OJS so erweitert, dass ab OJS 3.2 bereits publizierte Artikel per Knopfdruck mit einer neuen Version versehen werden können. Diese kann zunächst bearbeitet und anschließend veröffentlicht werden. Alte Versionen werden auf der Artikelseite als Liste angezeigt. Der im Projekt entwickelte Code wird nach dem Release von OJS 3.2.0 in den Masterbranch übernommen. Zusätzlich wurden eine technische Dokumentation, eine englischsprachige Nutzer/innenanleitung und eine deutsche Handreichung erstellt. 
+* Code (Pull requests): https://github.com/pkp/ojs/pull/2103 (OJS),  https://github.com/pkp/pkp-lib/pull/4007 (pkp-lib) 
+* Technische Dokumentation und englische Handreichung: https://github.com/ojsde/versioning/wiki 
+* Handreichung:    https://www.ojs-de.net/support/anleitungen/artikelversionierung
 
----
+Verbesserung der E-Mail-Verwaltung: In OJS verfügbare und für einzelne Zeitschriften anpassbare Mail-Vorlagen dienen der Erleichterung der Kommunikation zwischen allen im Publikationsprozess beteiligten Akteur*innen. Die bereits in der ersten Projektphase getätigte Umsetzung einer vereinfachten Export-Import-Funktion schien angesichts von Nutzer*innenrückmeldungen nicht ausreichend. Deshalb wurde die Verwaltung von E-Mail-Vorlagen in OJS 3.2 zusätzlich durch die Einführung von Filterfunktionen wesentlich verbessert. Der Code wird ab Release OJS 3.2.0 in den Masterbranch übernommen werden.
+* Code: https://github.com/pkp/ojs/pull/2345
+* Handreichung: https://www.ojs-de.net/support/anleitungen/e-mail-vorlagen-anpassen
+
+
+
+
+
+
+
 
 ## Zentrale Informatik, Universität Zürich
+
+*Dr. Martin Brändle, Zentrale Informatik, Universität Zürich*
 
 ### A new HOPE – Universität Zürich neu auf OJS 3.1.2
 
@@ -36,5 +42,4 @@ Die Hauptbibliothek der Universität Zürich freut sich, den Launch der modernis
 
 Die Migrationsarbeiten liefen wie folgt ab: Parallel zur laufenden HOPE-Installation wurden eine weitere Test- und Produktionsumgebung aufgebaut und vom produktiven HOPE 2.4.8 Server ein Abbild der Daten auf die neue Testumgebung gezogen und nach OJS 3.1.2 upgedatet. Darüber hinaus mussten etliche Übersetzungsdateien vor allem in Französisch und Italienisch ergänzt und auch einige Bugs gefixt werden – diese Änderungen wurden via GitHub an PKP zurückgespielt. Ebenso wurde für jede Zeitschrift ein neues Layout erstellt. Am 10. April wurde die Testplattform an einer Informationsveranstaltung den Herausgebern präsentiert und in den folgenden Wochen via Feedbackformular deren Änderungswünsche eingeholt und implementiert, so z.B. der Wunsch nach einer einfachen Rubrikennavigation im Inhaltsverzeichnis von https://sui-generis.ch. Anforderungen und Migrationsanleitungen für jede Zeitschrift, Bugs und Changes wurden in JIRA dokumentiert. Die Migration aller Daten und Einstellungen auf die neue Produktionsumgebung wurde am 23. Mai durchgeführt. Ein Knackpunkt waren die von PKP unzureichend dokumentierten Apache-Rewriteregeln für Zeitschriften, die eine eigene Domain verwenden. Insbesondere die mit OJS 3.1.2 verwendete REST API bereitete da zusätzliche Schwierigkeiten.
 
-*Dr. Martin Brändle, Zentrale Informatik, Universität Zürich*
 
