--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -1,3 +1,4 @@
+Inhaltsverzeichnis
 - [Center für Digitale Systeme, Freie Universität Berlin](#center-fur-digitale-systeme-freie-universitat-berlin)
   * [OpenAIRE-Kompatibilität](#openaire-kompatibilitat)
 - [Versionierung](#versionierung)
@@ -19,7 +20,7 @@ Automatische Meldung an die Deutsche Nationalbibliothek: Mithilfe des DNB-Export
 * Code: https://github.com/bozana/dnb/tree/ojs-stable-2_4_8 und https://github.com/bozana/dnb/tree/ojs-stable-3_0_2 
 * Handreichung: https://www.ojs-de.net/support/anleitungen/dnb-plugin
 
-## Versionierung
+### Versionierung
  
 
 Um im Sinne guter wissenschaftlicher Praxis sicherzustellen, dass Artikel nach der Publi­kation nicht verändert werden, wurde OJS so erweitert, dass ab OJS 3.2 bereits publizierte Artikel per Knopfdruck mit einer neuen Version versehen werden können. Diese kann zunächst bearbeitet und anschließend veröffentlicht werden. Alte Versionen werden auf der Artikelseite als Liste angezeigt. Der im Projekt entwickelte Code wird nach dem Release von OJS 3.2.0 in den Masterbranch übernommen. Zusätzlich wurden eine technische Dokumentation, eine englischsprachige Nutzer/innenanleitung und eine deutsche Handreichung erstellt. 
