--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -1,10 +1,10 @@
 Inhaltsverzeichnis
 - [Center für Digitale Systeme, Freie Universität Berlin](#center-fur-digitale-systeme-freie-universitat-berlin)
   * [OpenAIRE-Kompatibilität](#openaire-kompatibilitat)
-- [Versionierung](#versionierung)
+  * [Versionierung](#versionierung)
 - [Zentrale Informatik, Universität Zürich](#zentrale-informatik-universitat-zurich)
   * [A new HOPE – Universität Zürich neu auf OJS 3.1.2](#a-new-hope-%E2%80%93-universitat-zurich-neu-auf-ojs-312)
-  
+    
 ## Center für Digitale Systeme, Freie Universität Berlin
  *Dr. Katja Mruck, Center für Digitale Systeme, Freie Universität Berlin*
 
