--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -2,11 +2,11 @@
 Inhaltsverzeichnis
 ---
 
-- [Center für Digitale Systeme, Freie Universität Berlin](#center-fur-digitale-systeme-freie-universitat-berlin)
-  * [OpenAIRE-Kompatibilität](#openaire-kompatibilitat)
+- [Center für Digitale Systeme, Freie Universität Berlin](#center-fur-digitale-systeme-freie-universität-berlin)
+  * [OpenAIRE-Kompatibilität](#openaire-kompatibilität)
   * [Versionierung](#versionierung)
-- [Zentrale Informatik, Universität Zürich](#zentrale-informatik-universitat-zurich)
-  * [A new HOPE – Universität Zürich neu auf OJS 3.1.2](#a-new-hope-%E2%80%93-universitat-zurich-neu-auf-ojs-312)
+- [Zentrale Informatik, Universität Zürich](#zentrale-informatik-universität-zürich)
+  * [A new HOPE – Universität Zürich neu auf OJS 3.1.2](#a-new-hope-%E2%80%93-universität-zürich-neu-auf-ojs-312)
     
 ## Center für Digitale Systeme, Freie Universität Berlin
  *Dr. Katja Mruck, Center für Digitale Systeme, Freie Universität Berlin*
