--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -2,7 +2,7 @@
 Inhaltsverzeichnis
 ---
 
-- [Center für Digitale Systeme, Freie Universität Berlin](#center-fur-digitale-systeme-freie-universität-berlin)
+- [Center für Digitale Systeme, Freie Universität Berlin](#center-für-digitale-systeme-freie-universität-berlin)
   * [OpenAIRE-Kompatibilität](#openaire-kompatibilität)
   * [Versionierung](#versionierung)
 - [Zentrale Informatik, Universität Zürich](#zentrale-informatik-universität-zürich)
