--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -1,5 +1,5 @@
 
-Inhaltsverzeichnis
+# Inhaltsverzeichnis
 ---
 
 - [Center für Digitale Systeme, Freie Universität Berlin](#center-für-digitale-systeme-freie-universität-berlin)
