--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -5,7 +5,7 @@
   * [OpenAIRE-Kompatibilität](#openaire-kompatibilität)
   * [Versionierung](#versionierung)
 - [Zentrale Informatik, Universität Zürich](#zentrale-informatik-universität-zürich)
-  * [A new HOPE – Universität Zürich neu auf OJS 3.1.2](#a-new-hope-%E2%80%93-universität-zürich-neu-auf-ojs-312)
+  * [A new HOPE – Universität Zürich neu auf OJS 3.1.2](#a-new-hope--universität-zürich-neu-auf-ojs-312)
     
 ## Center für Digitale Systeme, Freie Universität Berlin
  *Dr. Katja Mruck, Center für Digitale Systeme, Freie Universität Berlin*
