--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -71,6 +71,42 @@ Herbst wird die Edition Open Access die Erhebung für die eigene
 Autor*innenschaft durchführen.
 
 
+## Universitätsbibliothek Heidelberg
+
+
+*Dulip Withanage, Uiversitätsbibliothek Heidelberg*
+
+### Orcid-Plugin für OJS 3.1.1
+
+Die von Universitätsbibliothek Heidelberg erweiterte ORCID-Plugin hat die Anforderungen für die Verwendung der ORCID Member-API in OJS3 erfolgreich erfüllt.  Dies wurde am 5. Juli 2019 durch eine Online-Demonstration mit Mitgliedern der Universitätsbiblothek Heidelberg und  ORCID bestätigt. Folgende Funktionen stehen im neuen Orcid-Plugin zur Verfügung.  Derzeit unterstützt das ORCID-Plugin  OJS  3.1.1 und das Plugin ist in der PKP Plugin Galerie verfügbar. Die Entwicklung erfolgte mit Unterstützung der PKP und anderer OJS-Community-Mitglieder.
+
+Code : https://github.com/pkp/orcidProfile
+
+Für Fragen und Anregungen: https://github.com/pkp/pkp-lib/issues/xxxxxx
+
+### LensGalleyBits Plugin
+
+Der browserbasierte JATS-XML Lens-Viewer ist seit 4 Jahren zur als
+Standard-Viewer für Monographien und Sammelbänden im Heidelberg
+University Publishing (heiUP) eingesetzt. Mit dem Schwerpunkt der
+XML-First-Veröffentlichungen in OJS3 wurde der Javascript-basierte Lens
+Viewer als Plugin in OJS 3 implementiert. Dieses Plugin unterstützt
+sowohl OJS 3.1.2- als auch master-branch. Das Plugin verwendet den
+Ansatz von "Dependancy Files", der in OMP und OJS seit kurzem verfügbar 
+ist.
+* Code : https://github.com/withanage/lensGalleyBits
+* Funktionen: https://github.com/withanage/UBHD-Lens
+
+### OMP Kapitelerweiterungen
+Um mehr Metadatenfelder für Kapitel zu unterstützen, wurde das
+OMP-Backend mit mehreren erforderlichen Feldern erweitert. Dazu gehören
+die Kapitel-Zusammenfassung und die Seitenzahl von einzelnen Kapitel.
+Darüber hinaus wurde die Veröffentlichungsdatumunterstützung für
+einzelne Kapitel mit Abstimmung mit PKP implmentiert um
+Vorveröffenclichungen zu unterstützen. Diese Erweiterungen sind in
+Haupt-Quellcode und in OMP ab Version 3.1.2 verfügbar.
+
+* [Feature Demo](https://user-images.githubusercontent.com/1921992/60190876-ab86c100-9833-11e9-9e5d-c048fe0f6417.gif)
 ## Zentrale Informatik, Universität Zürich
 
 *Dr. Martin Brändle, Zentrale Informatik, Universität Zürich*
