--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -13,6 +13,7 @@
 ## Center für Digitale Systeme, Freie Universität Berlin
  *Dr. Katja Mruck, Center für Digitale Systeme, Freie Universität Berlin*
 
+Im Rahmen des Projektes OJS-de.net wurden weitere Softwareanpassungen fertiggestellt:
 
 ### OpenAIRE-Kompatibilität
 Die Funktionalitäten des bereits in einem Vorgängerprojekt erstellten OpenAIRE- und Driver- Plugins wurden zusammengeführt und für OJS 3 an die aktualisierten [Open-AIRE-Richtlinien](https://guidelines.openaire.eu/en/latest/data/index.html) angepasst. Das Plugin ist in der Plugin-Gallery verfügbar, zusätzlich wurde eine Handreichung erstellt.
@@ -21,19 +22,34 @@ Die Funktionalitäten des bereits in einem Vorgängerprojekt erstellten OpenAIRE
 * Technische Dokumentation: https://github.com/ojsde/openAIRE/blob/master/readme.md 
 * Handreichung: https://www.ojs-de.net/support/anleitungen/openaire-plugin
 
-Automatische Meldung an die Deutsche Nationalbibliothek: Mithilfe des DNB-Export-Plugins wird der Export von Artikel-Metadaten und -Volltexten (im PDF- und EPUB-Format) zwecks der gesetzlichen Pflichtablieferung an die Deutsche Nationalbibliothek (DNB) ermöglicht. Das Plug-In bietet auch die Option, das Transferpaket direkt in den sog. DNB-Hotfolder abzuliefern. Das Plugin wurde für OJS 2.48 und 3.02 angepasst, und es wurden entsprechende Handreichungen erstellt. 
+### Automatische Meldung an die Deutsche Nationalbibliothek: Mithilfe
+
+Mithilfe des DNB-Export-Plugins wird der Export von Artikel-Metadaten und -Volltexten (im PDF- und EPUB-Format) zwecks der gesetzlichen Pflichtablieferung an die Deutsche Nationalbibliothek (DNB) ermöglicht. Das Plug-In erlaubt, das Transferpaket in einen sog. DNB-Hotfolder abzuliefern. Hierfür sind am CeDiS bereits Vorarbeiten in Eigenleistung erbracht worden. Im Projekt wurde das Plugin für OJS 3.1.1 angepasst, und es wurden entsprechende Handreichungen erstellt.
+
 * Code: https://github.com/bozana/dnb/tree/ojs-stable-2_4_8 und https://github.com/bozana/dnb/tree/ojs-stable-3_0_2 
+* Technische Dokumentation: https://github.com/ojsde/dnb/blob/ojs-stable-2_4_8/README und https://github.com/ojsde/dnb/blob/ojs-stable-3_1_1/README 
+
 * Handreichung: https://www.ojs-de.net/support/anleitungen/dnb-plugin
 
 ### Versionierung
  
 
-Um im Sinne guter wissenschaftlicher Praxis sicherzustellen, dass Artikel nach der Publi­kation nicht verändert werden, wurde OJS so erweitert, dass ab OJS 3.2 bereits publizierte Artikel per Knopfdruck mit einer neuen Version versehen werden können. Diese kann zunächst bearbeitet und anschließend veröffentlicht werden. Alte Versionen werden auf der Artikelseite als Liste angezeigt. Der im Projekt entwickelte Code wird nach dem Release von OJS 3.2.0 in den Masterbranch übernommen. Zusätzlich wurden eine technische Dokumentation, eine englischsprachige Nutzer/innenanleitung und eine deutsche Handreichung erstellt. 
-* Code (Pull requests): https://github.com/pkp/ojs/pull/2103 (OJS),  https://github.com/pkp/pkp-lib/pull/4007 (pkp-lib) 
-* Technische Dokumentation und englische Handreichung: https://github.com/ojsde/versioning/wiki 
-* Handreichung:    https://www.ojs-de.net/support/anleitungen/artikelversionierung
+Um im Sinne guter wissenschaftlicher Praxis sicherzustellen, dass Artikel nach der Publi­kation nicht verändert werden, wurde OJS so erweitert, dass ab OJS 3.2 bereits publizierte Artikel per Knopfdruck mit einer neuen Version versehen werden können. Diese kann zunächst bearbeitet und anschließend veröffentlicht werden. Alte Versionen werden auf der Artikelseite als Liste angezeigt. Der im Projekt entwickelte Code wird nach dem Release von OJS 3.2.0 in den Masterbranch übernommen. Zusätzlich wurden eine technische Dokumentation, eine englischsprachige Nutzer/innenanleitung und eine deutsche Handreichung erstellt.
+* Code (Pull requests): https://github.com/pkp/ojs/pull/2103 (OJS), https://github.com/pkp/pkp-lib/pull/4007 (pkp-lib)
+* Technische Dokumentation und englische Handreichung: https://github.com/ojsde/versioning/wiki
+* Handreichung: https://www.ojs-de.net/support/anleitungen/artikelversionierung
 
-Verbesserung der E-Mail-Verwaltung: In OJS verfügbare und für einzelne Zeitschriften anpassbare Mail-Vorlagen dienen der Erleichterung der Kommunikation zwischen allen im Publikationsprozess beteiligten Akteur*innen. Die bereits in der ersten Projektphase getätigte Umsetzung einer vereinfachten Export-Import-Funktion schien angesichts von Nutzer*innenrückmeldungen nicht ausreichend. Deshalb wurde die Verwaltung von E-Mail-Vorlagen in OJS 3.2 zusätzlich durch die Einführung von Filterfunktionen wesentlich verbessert. Der Code wird ab Release OJS 3.2.0 in den Masterbranch übernommen werden.
+### Verbesserung der E-Mail-Verwaltung 
+
+In OJS verfügbare und für einzelne Zeitschriften anpassbare
+Mail-Vorlagen dienen der Erleichterung der Kommunikation zwischen allen
+im Publikationsprozess beteiligten Akteur*innen. Die bereits in der
+ersten Projektphase getätigte Umsetzung einer vereinfachten
+Export-Import-Funktion schien angesichts von Nutzer*innenrückmeldungen
+nicht ausreichend. Deshalb wurde die Verwaltung von E-Mail-Vorlagen in
+OJS 3.2 zusätzlich durch die Einführung von Filterfunktionen wesentlich
+verbessert. Der Code wird ab Release OJS 3.2.0 in den Masterbranch
+übernommen werden.
 * Code: https://github.com/pkp/ojs/pull/2345
 * Handreichung: https://www.ojs-de.net/support/anleitungen/e-mail-vorlagen-anpassen
 
@@ -86,14 +102,15 @@ Für Fragen und Anregungen: https://github.com/pkp/pkp-lib/issues/xxxxxx
 
 ### LensGalleyBits Plugin
 
-Der browserbasierte JATS-XML Lens-Viewer ist seit 4 Jahren zur als
-Standard-Viewer für Monographien und Sammelbänden im Heidelberg
+Der browserbasierte JATS-XML Lens-Viewer ist seit 4 Jahren als
+Standard-HTML-Viewer für Monographien und Sammelbänden im Heidelberg
 University Publishing (heiUP) eingesetzt. Mit dem Schwerpunkt der
 XML-First-Veröffentlichungen in OJS3 wurde der Javascript-basierte Lens
-Viewer als Plugin in OJS 3 implementiert. Dieses Plugin unterstützt
+Viewer als Plugin fürOJS 3 implementiert. Dieses Plugin unterstützt
 sowohl OJS 3.1.2- als auch master-branch. Das Plugin verwendet den
-Ansatz von "Dependancy Files", der in OMP und OJS seit kurzem verfügbar 
+Ansatz von "Dependancy Files", der in OMP und OJS seit kurzem verfügbar
 ist.
+
 * Code : https://github.com/withanage/lensGalleyBits
 * Funktionen: https://github.com/withanage/UBHD-Lens
 
@@ -104,7 +121,7 @@ die Kapitel-Zusammenfassung und die Seitenzahl von einzelnen Kapitel.
 Darüber hinaus wurde die Veröffentlichungsdatumunterstützung für
 einzelne Kapitel mit Abstimmung mit PKP implmentiert um
 Vorveröffenclichungen zu unterstützen. Diese Erweiterungen sind in
-Haupt-Quellcode und in OMP ab Version 3.1.2 verfügbar.
+Haupt-Quellcode  in OMP ab Version 3.1.2 verfügbar.
 
 * [Feature Demo](https://user-images.githubusercontent.com/1921992/60190876-ab86c100-9833-11e9-9e5d-c048fe0f6417.gif)
 ## Zentrale Informatik, Universität Zürich
