--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -1,14 +1,18 @@
 
-# Inhaltsverzeichnis
-
-- [Center für Digitale Systeme, Freie Universität Berlin](#center-für-digitale-systeme-freie-universität-berlin)
-  * [OpenAIRE-Kompatibilität](#openaire-kompatibilität)
-  * [Versionierung](#versionierung)
-- [Edition Open Access](#edition-open-access)
-  * [XML-Editor für TEI](#xml-editor-für-tei)
-  * [Umfrage zu Open Access unter Autor*innen](umfrage-zu-open-access-unter-autor*innen)
-- [Zentrale Informatik, Universität Zürich](#zentrale-informatik-universität-zürich)
-  * [A new HOPE – Universität Zürich neu auf OJS 3.1.2](#a-new-hope--universität-zürich-neu-auf-ojs-312)
+- [Inhaltsverzeichnis](#inhaltsverzeichnis)
+  * [Center für Digitale Systeme, Freie Universität Berlin](#center-für-digitale-systeme-freie-universität-berlin)
+    + [OpenAIRE-Kompatibilität](#openaire-kompatibilität)
+    + [Automatische Meldung an die Deutsche Nationalbibliothek](#automatische-meldung-an-die-deutsche-nationalbibliothek)
+    + [Versionierung](#versionierung)
+    + [Verbesserung der E-Mail-Verwaltung](#verbesserung-der-e-mail-verwaltung)
+  * [Edition Open Access](#edition-open-access)
+    + [XML-Editor für TEI](#xml-editor-fur-tei)
+    + [Umfrage zu Open Access unter Autor*innen](#umfrage-zu-open-access-unter-autorinnen)
+  * [Universitätsbibliothek Heidelberg](#universitatsbibliothek-heidelberg)
+    + [Orcid-Plugin für OJS 3.1.1](#orcid-plugin-fur-ojs-311)
+    + [LensGalleyBits Plugin](#lensgalleybits-plugin)
+  * [Zentrale Informatik, Universität Zürich](#zentrale-informatik-universität-zürich)
+    + [A new HOPE – Universität Zürich neu auf OJS 3.1.2](#a-new-hope--universität-zürich-neu-auf-ojs-312)
 
 ## Center für Digitale Systeme, Freie Universität Berlin
  *Dr. Katja Mruck, Center für Digitale Systeme, Freie Universität Berlin*
@@ -22,7 +26,7 @@ Die Funktionalitäten des bereits in einem Vorgängerprojekt erstellten OpenAIRE
 * Technische Dokumentation: https://github.com/ojsde/openAIRE/blob/master/readme.md 
 * Handreichung: https://www.ojs-de.net/support/anleitungen/openaire-plugin
 
-### Automatische Meldung an die Deutsche Nationalbibliothek: Mithilfe
+### Automatische Meldung an die Deutsche Nationalbibliothek
 
 Mithilfe des DNB-Export-Plugins wird der Export von Artikel-Metadaten und -Volltexten (im PDF- und EPUB-Format) zwecks der gesetzlichen Pflichtablieferung an die Deutsche Nationalbibliothek (DNB) ermöglicht. Das Plug-In erlaubt, das Transferpaket in einen sog. DNB-Hotfolder abzuliefern. Hierfür sind am CeDiS bereits Vorarbeiten in Eigenleistung erbracht worden. Im Projekt wurde das Plugin für OJS 3.1.1 angepasst, und es wurden entsprechende Handreichungen erstellt.
 
