--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -6,9 +6,9 @@
     + [Versionierung](#versionierung)
     + [Verbesserung der E-Mail-Verwaltung](#verbesserung-der-e-mail-verwaltung)
   * [Edition Open Access](#edition-open-access)
-    + [XML-Editor für TEI](#xml-editor-fur-tei)
-    + [Umfrage zu Open Access unter Autor*innen](#umfrage-zu-open-access-unter-autorinnen)
-  * [Universitätsbibliothek Heidelberg](#universitatsbibliothek-heidelberg)
+    + [XML-Editor für TEI](#xml-editor-für-tei)
+    + [Umfrage zu Open Access unter Autor*innen](#umfrage-zu-open-access-unter-autor*innen)
+  * [Universitätsbibliothek Heidelberg](#universitätsbibliothek-heidelberg)
     + [Orcid-Plugin für OJS 3.1.1](#orcid-plugin-fur-ojs-311)
     + [LensGalleyBits Plugin](#lensgalleybits-plugin)
   * [Zentrale Informatik, Universität Zürich](#zentrale-informatik-universität-zürich)
