--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -1,18 +1,19 @@
 
-- [Inhaltsverzeichnis](#inhaltsverzeichnis)
-  * [Center für Digitale Systeme, Freie Universität Berlin](#center-für-digitale-systeme-freie-universität-berlin)
-    + [OpenAIRE-Kompatibilität](#openaire-kompatibilität)
-    + [Automatische Meldung an die Deutsche Nationalbibliothek](#automatische-meldung-an-die-deutsche-nationalbibliothek)
-    + [Versionierung](#versionierung)
-    + [Verbesserung der E-Mail-Verwaltung](#verbesserung-der-e-mail-verwaltung)
-  * [Edition Open Access](#edition-open-access)
-    + [XML-Editor für TEI](#xml-editor-für-tei)
-    + [Umfrage zu Open Access unter Autor*innen](#umfrage-zu-open-access-unter-autor*innen)
-  * [Universitätsbibliothek Heidelberg](#universitätsbibliothek-heidelberg)
-    + [Orcid-Plugin für OJS 3.1.1](#orcid-plugin-fur-ojs-311)
-    + [LensGalleyBits Plugin](#lensgalleybits-plugin)
-  * [Zentrale Informatik, Universität Zürich](#zentrale-informatik-universität-zürich)
-    + [A new HOPE – Universität Zürich neu auf OJS 3.1.2](#a-new-hope--universität-zürich-neu-auf-ojs-312)
+## Inhaltsverzeichnis
+
+* [Center für Digitale Systeme, Freie Universität Berlin](#center-für-digitale-systeme-freie-universität-berlin)
++ [OpenAIRE-Kompatibilität](#openaire-kompatibilität)
++ [Automatische Meldung an die Deutsche Nationalbibliothek](#automatische-meldung-an-die-deutsche-nationalbibliothek)
++ [Versionierung](#versionierung)
++ [Verbesserung der E-Mail-Verwaltung](#verbesserung-der-e-mail-verwaltung)
+* [Edition Open Access](#edition-open-access)
++ [XML-Editor für TEI](#xml-editor-für-tei)
++ [Umfrage zu Open Access unter Autor*innen](#umfrage-zu-open-access-unter-autor*innen)
+* [Universitätsbibliothek Heidelberg](#universitätsbibliothek-heidelberg)
++ [Orcid-Plugin für OJS 3.1.1](#orcid-plugin-fur-ojs-311)
++ [LensGalleyBits Plugin](#lensgalleybits-plugin)
+* [Zentrale Informatik, Universität Zürich](#zentrale-informatik-universität-zürich)
++ [A new HOPE – Universität Zürich neu auf OJS 3.1.2](#a-new-hope--universität-zürich-neu-auf-ojs-312)
 
 ## Center für Digitale Systeme, Freie Universität Berlin
  *Dr. Katja Mruck, Center für Digitale Systeme, Freie Universität Berlin*
