--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -49,9 +49,9 @@ Um im Sinne guter wissenschaftlicher Praxis sicherzustellen, dass Artikel nach d
 
 In OJS verfügbare und für einzelne Zeitschriften anpassbare
 Mail-Vorlagen dienen der Erleichterung der Kommunikation zwischen allen
-im Publikationsprozess beteiligten Akteur*innen. Die bereits in der
+im Publikationsprozess beteiligten Akteur**innen. Die bereits in der
 ersten Projektphase getätigte Umsetzung einer vereinfachten
-Export-Import-Funktion schien angesichts von Nutzer*innenrückmeldungen
+Export-Import-Funktion schien angesichts von Nutzer**innenrückmeldungen
 nicht ausreichend. Deshalb wurde die Verwaltung von E-Mail-Vorlagen in
 OJS 3.2 zusätzlich durch die Einführung von Filterfunktionen wesentlich
 verbessert. Der Code wird ab Release OJS 3.2.0 in den Masterbranch
