--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -11,7 +11,7 @@
     + [Umfrage zu Open Access unter Autor*innen](#umfrage-zu-open-access-unter-autor*innen)
 * [Universitätsbibliothek Heidelberg](#universitätsbibliothek-heidelberg)
     + [Orcid-Plugin für OJS 3.1.1](#orcid-plugin-für-ojs-311)
-    + [LensGalleyBits Plugin](#lensgalleybits-plugin)
+  +   [LensGalleyBits Plugin für JATS XML](#lensgalleybits-plugin-für-jats-xml)
     + [OMP Kapitelerweiterungen](#omp-kapitelerweiterungen)
 * [Zentrale Informatik, Universität Zürich](#zentrale-informatik-universität-zürich)
     + [A new HOPE – Universität Zürich neu auf OJS 3.1.2](#a-new-hope--universität-zürich-neu-auf-ojs-312)
@@ -106,7 +106,7 @@ Code : https://github.com/pkp/orcidProfile
 
 Für Fragen und Anregungen: https://github.com/pkp/pkp-lib/issues/xxxxxx
 
-### LensGalleyBits Plugin
+### LensGalleyBits Plugin für JATS XML
 
 Der browserbasierte JATS-XML Lens-Viewer ist seit 4 Jahren als
 Standard-HTML-Viewer für Monographien und Sammelbänden im Heidelberg
