--- a/berichte/2019-02.md
+++ b/berichte/2019-02.md
@@ -112,7 +112,7 @@ Der browserbasierte JATS-XML Lens-Viewer ist seit 4 Jahren als
 Standard-HTML-Viewer für Monographien und Sammelbänden im Heidelberg
 University Publishing (heiUP) eingesetzt. Mit dem Schwerpunkt der
 XML-First-Veröffentlichungen in OJS3 wurde der Javascript-basierte Lens
-Viewer als Plugin fürOJS 3 implementiert. Dieses Plugin unterstützt
+Viewer als Plugin für OJS 3 implementiert. Dieses Plugin unterstützt
 sowohl OJS 3.1.2- als auch master-branch. Das Plugin verwendet den
 Ansatz von "Dependancy Files", der in OMP und OJS seit kurzem verfügbar
 ist.
@@ -126,8 +126,8 @@ OMP-Backend mit mehreren erforderlichen Feldern erweitert. Dazu gehören
 die Kapitel-Zusammenfassung und die Seitenzahl von einzelnen Kapitel.
 Darüber hinaus wurde die Veröffentlichungsdatumunterstützung für
 einzelne Kapitel mit Abstimmung mit PKP implmentiert um
-Vorveröffenclichungen zu unterstützen. Diese Erweiterungen sind in
-Haupt-Quellcode  in OMP ab Version 3.1.2 verfügbar.
+Vorveröffentlichungen zu unterstützen. Diese Erweiterungen sind in
+Haupt-Quellcode in OMP ab Version 3.1.2 verfügbar.
 
 * [Feature Demo](https://user-images.githubusercontent.com/1921992/60190876-ab86c100-9833-11e9-9e5d-c048fe0f6417.gif)
 ## Zentrale Informatik, Universität Zürich
@@ -136,7 +136,7 @@ Haupt-Quellcode  in OMP ab Version 3.1.2 verfügbar.
 
 ### A new HOPE – Universität Zürich neu auf OJS 3.1.2
 
-Die Hauptbibliothek der Universität Zürich freut sich, den Launch der modernisierten HOPE-Plattform bekannt zu geben. Das Update von OJS Version 2.4.8 auf 3.1.2 bietet der HOPE-Community neue Funktionen sowie die Vorteile einer intuitiven Benutzeroberfläche und eines modernen Erscheinungsbilds auch auf mobilen Geräten. Die neue Version ist unter der gleichen URL verfügbar: https://www.hope.uzh.ch/ . Gehostet werden gegenwärtig fünf teils mehrsprachige Zeitschriften (de, en, fr, it) , drei weitere werden in den nächsten Monaten dazukommen.
+Die Hauptbibliothek der Universität Zürich freut sich, den Launch der modernisierten HOPE-Plattform bekannt zu geben. Das Update von OJS Version 2.4.8 auf 3.1.2 bietet der HOPE-Community neue Funktionen sowie die Vorteile einer intuitiven Benutzeroberfläche und eines modernen Erscheinungsbilds auch auf mobilen Geräten. Die neue Version ist unter der gleichen URL verfügbar: https://www.hope.uzh.ch/ . Gehostet werden gegenwärtig fünf teils mehrsprachige Zeitschriften (de, en, fr, it), drei weitere werden in den nächsten Monaten dazukommen.
 
 Die Migrationsarbeiten liefen wie folgt ab: Parallel zur laufenden HOPE-Installation wurden eine weitere Test- und Produktionsumgebung aufgebaut und vom produktiven HOPE 2.4.8 Server ein Abbild der Daten auf die neue Testumgebung gezogen und nach OJS 3.1.2 upgedatet. Darüber hinaus mussten etliche Übersetzungsdateien vor allem in Französisch und Italienisch ergänzt und auch einige Bugs gefixt werden – diese Änderungen wurden via GitHub an PKP zurückgespielt. Ebenso wurde für jede Zeitschrift ein neues Layout erstellt. Am 10. April wurde die Testplattform an einer Informationsveranstaltung den Herausgebern präsentiert und in den folgenden Wochen via Feedbackformular deren Änderungswünsche eingeholt und implementiert, so z.B. der Wunsch nach einer einfachen Rubrikennavigation im Inhaltsverzeichnis von https://sui-generis.ch. Anforderungen und Migrationsanleitungen für jede Zeitschrift, Bugs und Changes wurden in JIRA dokumentiert. Die Migration aller Daten und Einstellungen auf die neue Produktionsumgebung wurde am 23. Mai durchgeführt. Ein Knackpunkt waren die von PKP unzureichend dokumentierten Apache-Rewriteregeln für Zeitschriften, die eine eigene Domain verwenden. Insbesondere die mit OJS 3.1.2 verwendete REST API bereitete da zusätzliche Schwierigkeiten.
 
