--- a/berichte/2020-01.md
+++ b/berichte/2020-01.md
@@ -1,6 +1,20 @@
+## Neues Projekt OPTIMETA der TIB und Uni Münster
 
-Beispiel
----
+  *Dr. Anette Cordts, Christian Hauschke, Technische Informationsbibliothek*
+  
+  *Daniel Nüst, Institut für Geoinformatik, Universität Münster*
+
+Das Vorhaben OPTIMETA widmet sich der Stärkung des Open-Access-Publikationssystems durch die Einbindung von offenen Zitationen und raumzeitlichen Metadaten aus Open-Access-Zeitschriften an offen zugängliche Datenquellen. Es wird vom Bundesministerium für Bildung und Forschung (BMBF) im Rahmen der [Förderung von Projekten zur Beschleunigung der Transformation zu Open Access](https://www.bmbf.de/foerderungen/bekanntmachung-3044.html) für 2 Jahre gefördert.
+
+Die [Technische Informationsbibliothek](https://www.tib.eu/de/) (TIB) und das [Spatio-temporal Modelling Lab](https://www.uni-muenster.de/Geoinformatics/stml/) am [Institut für Geoinformatik der Westfälischen Wilhelms-Universität Münster](https://www.uni-muenster.de/Geoinformatics/) (WWU) leisten ein Beitrag zur Metadaten-Allmende, indem Open Journal Systems (OJS) als die am weitesten verbreitete Open-Source-Software für wissenschaftliche Zeitschriften um Funktionalitäten für die Erfassung und Distribution von offenen Metadaten erweitert wird. Die Kombination aus Open Source und Open Data versetzt Zeitschriften in die Lage, ihren jeweiligen Fachcommunities innovative Angebote zur semantisch bedeutsamen Verknüpfung von Artikeln anbieten zu können und sich mit Geodaten und Zitationsinformationen in relevante und offene Datenquellen einzubringen. Beides sorgt auf verschiedene Weise für bessere Sichtbarkeit und somit auch Auffindbarkeit von Publikationen, was wiederum die Attraktivität der jeweiligen Open-Access-Zeitschriften als Publikationsort steigert. Die technische Umsetzung des Vorhabens erfolgt in zwei OJS-Plugins und gemeinsam mit kooperierenden Zeitschriften und Betreibern von OJS-Servern.
+
+Weitere Infos folgen nach dem Projektstart im Frühjar 2021 auf der Projektwebseite: [https://projects.tib.eu/optimeta](https://projects.tib.eu/optimeta)
+
+------
+
+**Beispiel**
+
+------
 
 ## Center für Digitale Systeme, Freie Universität Berlin
  *Dr. Katja Mruck, Center für Digitale Systeme, Freie Universität Berlin*
