--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -1,8 +1,36 @@
-## Neues Projekt
+# ---Main header---
 
-  * Max Musterman
-  
-Beschreibung  
+## Team Elektronisches Publizieren und Open Access, Universitätsbibliothek, Freie Universität Berlin
+
+Das Team *Elektronisches Publizieren und Open Access* der Universitätsbibliothek (Center für Digitale Systeme) der FU Berlin freut sich, Sie über die Veröffentlichung neuer Plugin-Versionen für OJS bzw. OMP 3.3 informieren zu können.
+
+### **DNB Export Plugin**
+
+Diese Version des *DNB Export Plugins* für OJS 3.3 enthält wesentliche Neuerungen, die in enger Absprache mit der Deutschen Nationalbiblithek implemeniert wurden:
+
+- Ablieferung von ***verifizierten*** Orcis-IDs (zur Verifizierung muss das Orcid-Profile Plugin installiert sein)
+- Ablieferung von Begleitmaterial
+- Ablieferung von externen Fahnen (remote galleys)
+- integrierte Hilfe
+
+Bitte aktualisieren Sie Ihre Installationen und nutzen Sie in Zukunft folgende Plugin-Versionen zur Ablieferung an die DNB:
+
+- Plugin-Version 1.3.2 für OJS 3.1.2
+- Plugin-Version 1.4.1 für OJS 3.2
+- Plugin-Version 1.5 für OJS 3.3
+
+Die aktuellen Versionen des DNB-Export-Plugins finden Sie in unserem Github-Repo: <https://github.com/ojsde/dnb/releases>.
+
+### **Shariff Plugin**
+
+Das *Shariff Plugin* implemeniert die von [Heise Online](https://github.com/heiseonline/shariff) zur Verfügung getellte, DSGVO-konforme Verbindung zu Social Media Plattformen für OJS, OMP und OPS. Die neue Plugin-Version für OJS/OMP/OPS 3.3.0 bietet nun auch die Möglichkeit die Reihenfolge der auf der Webseite angezeigten Shariff-Buttens festzulegen.
+
+Die aktuelle Version für OJS/OMP/OPS 3.3.0 finden Sie in der *OJS/OMP Plugin Gallery* oder auf Github: <https://github.com/ojsde/shariff/releases/tag/v3_3_0>
+
+### **Slider Home Plugin**
+
+Das *Slider Home Plugin* integriert eine Bilder-Slideshow (mit Textüberlagerungen) auf der OJS/OMP Homepage. In der neuen Plugin-Version für OJS/OMP 3.3.0 stehen erweiterete Konfigurationsmöglichkeiten zur Verfügung. Die Bilder der Slideshow können nun anhand der Höhe des Bildschirms skaliert werden. Ausserdem können die Geschwindigkeit und die Verzögerung der Bildübergänge eingestellt werden.
+
+Die aktuelle Version für OJS/OMP 3.3.0 finden Sie auf Github: <https://github.com/cedis-epublishing/sliderHome/releases/tag/2.3.0.0>
 
 ------
-
