Update für 2021 Newsletter FU Berlin

--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -1,9 +1,10 @@
 # ---Main header---
 
-## Team Elektronisches Publizieren und Open Access, Universitätsbibliothek, Freie Universität Berlin
+## Team Open Access und wissenschaftliches Publizieren, Universitätsbibliothek, Freie Universität Berlin
 
-Das Team *Elektronisches Publizieren und Open Access* der Universitätsbibliothek (Center für Digitale Systeme) der FU Berlin freut sich, Sie über die Veröffentlichung neuer Plugin-Versionen für OJS bzw. OMP 3.3 informieren zu können.
+Das Team *Open Access und wissenschaftliches Publizieren* der Universitätsbibliothek (Center für Digitale Systeme) der FU Berlin freut sich, Sie über die Veröffentlichung neuer Plugin-Versionen für OJS bzw. OMP 3.3 informieren zu können.
 
+!!! @Dulip Diesen Teil nur reinnehmen wenn das DNB-Plugin bis zur Veröffentlichung des Newsletters offiziell released wurde (ich hoffe wir kommen mit den Tests bis dahin durch) !!!
 ### **DNB Export Plugin**
 
 Diese Version des *DNB Export Plugins* für OJS 3.3 enthält wesentliche Neuerungen, die in enger Absprache mit der Deutschen Nationalbiblithek implemeniert wurden:
