changed to new repository name

--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -16,7 +16,7 @@ Mehr Informationen:
 * Info: https://github.com/TIBHannover/optimetaCitations#optimetacitations-plugin
 * Code: https://github.com/TIBHannover/optimetaCitations
 * Demo Submission Wizard: https://github.com/TIBHannover/optimetaCitations/blob/main/images/optimeta-citations-submission-add.gif
-* Demo Submission Details / Edit: https://github.com/TIBHannover/optimetaCitations/blob/main/images/optimeta-citations-submission-edit.gif
+* Demo Submission Details: https://github.com/TIBHannover/optimetaCitations/blob/main/images/optimeta-citations-submission-edit.gif
 
 ------
 
