--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -1,4 +1,4 @@
-## OPTIMETA-Projekt von TIB und Universität Münster
+# OPTIMETA-Projekt von TIB und Universität Münster
 
 * Dr. Anette Cordts, Christian Hauschke, Gazi Yücel, Technische Informationsbibliothek
 
@@ -19,6 +19,8 @@ Mehr Informationen:
 * Demo Submission Details / Edit: https://github.com/TIBHannover/optimeta-plugin-citation/blob/main/images/optimeta-citations-submission-edit.gif
 
 ------
+
+# Universitätsbibliothek Heidelberg
 
 ## Update des VG Wort Plugins für OJS 3.2
 
