--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -1,3 +1,22 @@
+-   [OPTIMETA-Projekt von TIB und Universität
+    Münster](#optimeta-projekt-von-tib-und-universität-münster)
+-   [Universitätsbibliothek
+    Heidelberg](#universitätsbibliothek-heidelberg)
+    - [Update des VG Wort Plugins für OJS
+        3.2](#update-des-vg-wort-plugins-für-ojs-3.2)
+        -   [Weiterführende
+            Informationen](#weiterführende-informationen)
+    - [OMP Weiterentwicklungen der UB Heidelberg für
+        Fachinformationsdienste und
+        Universitätsverlag](#omp-weiterentwicklungen-der-ub-heidelberg-für-fachinformationsdienste-und-universitätsverlag)
+        -   [1. Kapitelseiten für OMP 3.4](#kapitelseiten-für-omp-3.4)
+        -   [2. Datacite Plugin für OMP
+            3.3](#datacite-plugin-für-omp-3.3)
+        -   [3. CitationStyleLanguage Plugin Portierung für OMP
+            3.4](#citationstylelanguage-plugin-portierung-für-omp-3.4)
+        -   [4. Kapitellizenzen für OMP](#kapitellizenzen-für-omp)
+    - [Neues Projekt](#neues-projekt)
+    - 
 # OPTIMETA-Projekt von TIB und Universität Münster
 
 * Dr. Anette Cordts, Christian Hauschke, Gazi Yücel, Technische Informationsbibliothek
@@ -19,6 +38,7 @@ Mehr Informationen:
 * Demo Submission Details / Edit: https://github.com/TIBHannover/optimeta-plugin-citation/blob/main/images/optimeta-citations-submission-edit.gif
 
 ------
+
 
 # Universitätsbibliothek Heidelberg
 
