--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -50,53 +50,60 @@ Unten finden Sie einen Einblick in die Entwicklungen dazu von Christian Marsiliu
 
 Sobald die Plugins einsatzbereit sind und wir für den Umstieg bereit sind würden wir über diese Mailingliste informieren und den Code veröffentlichen, je nach Bedarf über Github und möglicherweise über die Plugin Galerie von PKP.
 
---
+
 
 *Christian Marsilius*
 
-### 1. Kapitelseiten für OMP 3.4
+###  Kapitelseiten für OMP 3.4
 
 Bislang gab es im OMP Frontend nur eine Landing Page pro Band. Für die kommende OMP Version 3.4 konnten wir den OMP Core um die Möglichkeit ergänzen, für jedes Kapitel eine eigene Landing Page anzulegen.  
 Um eine Landing Page für ein Kapitel zu erzeugen, ist nur der entsprechende Haken im Formular der Kapitelmetadaten zu setzen. Die so aktivierten Kapitelseiten werden auf der Bandseite verlinkt.  
 Die Kapitelseiten unterstützen auch die Versionierung von Bänden. So ist es möglich, dass in der einen Version eine Kapitelseite existiert, in der anderen jedoch nicht. Während sich die interne Kapitel-ID mit jeder Version ändert, bleibt in der URL für alle Versionen die Kapitel-ID identisch, sodass eine Registrierung des Kapitels bspw. bei Datacite problemlos möglich ist.
 
-#### Weiterführende Informationen
-
 GitHub Issue: https://github.com/pkp/pkp-lib/issues/7132
 
-### 2. Datacite Plugin für OMP 3.3
+###  Datacite Plugin für OMP 3.3
 
 Das Datacite Plugin wurde für OMP 3.3 angepasst. Das Layout wurde hierbei dem OJS Datacite Plugin angeglichen.  
 Ob eine Anpassung des Datacite Plugins für OMP 3.4 erfolgt, ist aktuell noch offen. PKP arbeitet daran das Anlegen und Registrieren von DOIs in den Core zu übernehmen. Diese Entwicklung ist zunächst abzuwarten.
 
-#### Weiterführende Informationen
-
 Code Repository: https://github.com/withanage/datacite/tree/stable-3_3_0
 
-
-### 3. CitationStyleLanguage Plugin Portierung für OMP 3.4
+###  CitationStyleLanguage Plugin Portierung für OMP 3.4
 
 Das aus OJS bekannte CitationStyleLanguage Plugin von PKP wird ab OMP 3.4 auch für OMP verfügbar sein. Die OMP Unterstützung integrieren wir in das OJS Plugin, sodass es weiterhin nur ein Plugin geben wird. Das Plugin unterstützt in OMP sowohl Zitierempfehlungen für Bände als auch für Kapitel. Die Umsetzung steht kurz vor der Fertigstellung, um jedoch DOIs unterstützen zu können, sind die unter 2. erwähnten Veränderungen seitens PKP abzuwarten.
 
-#### Weiterführende Informationen
-
 Code Repository: https://github.com/UB-Heidelberg/citationStyleLanguage
 
-### 4. Kapitellizenzen für OMP
+###  Kapitellizenzen für OMP
 
 Wir arbeiten aktuell auch noch an einer Möglichkeit, Kapiteln eigene Lizenzen zuweisen zu können. Hierbei handelt es sich um eine OMP Core Erweiterung.
 
-#### Weiterführende Informationen
-
 GitHub Issue: https://github.com/pkp/pkp-lib/issues/5338
 
+---
 
+#  Technische Informationsbibliothek (TIB)
 
-## Neues Projekt
+*Dulip Withanage*
 
-  * Max Musterman
+###  Major Development Partner
+ TIB wird der erste und bisher einzige große Entwicklungspartner (Major Development Partner) des PKP außerhalb Nordamerikas.
+ Mit der Entwicklungspartnerschaft stärkt die TIB die langjährige, sowohl technisch als auch organisatorisch erfolgreiche Zusammenarbeit mit der PKP.
+ Weitere Informationen finden Sie in dem Blogbeitrag von Marco Tullney. 
+
+ https://blogs.tib.eu/wp/tib/2021/02/16/tib-und-pkp/
   
-Beschreibung  
+### OJS-Latex-Unterstützung
+Die TIB arbeitet mit Partnern in Frankreich an einem Plugin für die Konvertierung von Latex in Jats in OJS, das mathml unterstützt. Die grundlegenden Funktionstests für ein  generisches XML-Format sind bereits abgeschlossen. Die Konvertierung in JATS und die Anbindung an OJS sind für 2022 geplant.
+
+### Research Organization Registry(ROR) Plugin 
+Von der TIB langfristig betreuter ROR-Plugin erhält Community Beiträge für Open Preprints Systems (OPS)
+Die aktuelle Plugin-Galerie Version 1.0.0.12 unterstützt die OPS Version 3.3
+https://github.com/withanage/ror/
+
+
+
 
 
 
