--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -112,12 +112,20 @@ GitHub Issue: https://github.com/pkp/pkp-lib/issues/5338
 
  https://blogs.tib.eu/wp/tib/2021/02/16/tib-und-pkp/
   
+### OJS Long-term Archving Plugin 
+
+Für den eigenen Gebrauch hat die TIB ein Export-Plugin für die kommerzielle Langzeitarchivierungslösung [ExLibris Rosetta] implementiert (https://exlibrisgroup.com/de/produkte/rosetta/).
+Das Rosetta-Langzeitarchivierungssystem richtet sich nach dem OAIS-Referenzmodell (Open Archival Information System), das  als ISO-Norm 14721 veröffentlicht wurde.
+Das Plugin erzeugt MODS-, METS- und Dublincore-Metadaten und der Code kann auf Anfrage unter CC-BY-Lizenz weitergegeben werden. Da die Nutzung auf eine kommerzielle Lösung beschränkt ist, wurde der Code nicht der Öffentlichkeit zugänglich gemacht.
+
+
 ### OJS-Latex-Unterstützung
 Die TIB arbeitet mit Partnern in Frankreich an einem Plugin für die Konvertierung von Latex in Jats in OJS, das mathml unterstützt. Die grundlegenden Funktionstests für ein  generisches XML-Format sind bereits abgeschlossen. Die Konvertierung in JATS und die Anbindung an OJS sind für 2022 geplant.
 
 ### Research Organization Registry(ROR) Plugin 
 Von der TIB langfristig betreuter ROR-Plugin erhält Community Beiträge für Open Preprints Systems (OPS)
 Die aktuelle Plugin-Galerie Version 1.0.0.12 unterstützt die OPS Version 3.3
+
 https://github.com/withanage/ror/
 
 
