--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -94,7 +94,7 @@ GitHub Issue: https://github.com/pkp/pkp-lib/issues/5338
   
 ### OJS Long-term Archving Plugin 
 
-Für den eigenen Gebrauch hat die TIB ein Export-Plugin für die kommerzielle Langzeitarchivierungslösung [ExLibris Rosetta] implementiert (https://exlibrisgroup.com/de/produkte/rosetta/).
+Für den eigenen Gebrauch hat die TIB ein Export-Plugin für die kommerzielle Langzeitarchivierungslösung [ExLibris Rosetta](https://exlibrisgroup.com/de/produkte/rosetta/). implementiert
 Das Rosetta-Langzeitarchivierungssystem richtet sich nach dem OAIS-Referenzmodell (Open Archival Information System), das  als ISO-Norm 14721 veröffentlicht wurde.
 Das Plugin erzeugt MODS-, METS- und Dublincore-Metadaten und der Code kann auf Anfrage unter CC-BY-Lizenz weitergegeben werden.
 
