--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -23,8 +23,6 @@ Mehr Informationen:
 
 # Universitätsbibliothek Heidelberg
 
-# Universitätsbibliothek Heidelberg
-
 ## Update des VG Wort Plugins für OJS 3.2
 
 *Christoph Otte, Universitätsbibliothek Heidelberg*
@@ -96,9 +94,9 @@ GitHub Issue: https://github.com/pkp/pkp-lib/issues/5338
   
 ### OJS Long-term Archving Plugin 
 
-Für den eigenen Gebrauch hat die TIB ein Export-Plugin für die kommerzielle Langzeitarchivierungslösung [ExLibris Rosetta] implementiert (https://exlibrisgroup.com/de/produkte/rosetta/).
+Für den eigenen Gebrauch hat die TIB ein Export-Plugin für die kommerzielle Langzeitarchivierungslösung [ExLibris Rosetta](https://exlibrisgroup.com/de/produkte/rosetta/). implementiert
 Das Rosetta-Langzeitarchivierungssystem richtet sich nach dem OAIS-Referenzmodell (Open Archival Information System), das  als ISO-Norm 14721 veröffentlicht wurde.
-Das Plugin erzeugt MODS-, METS- und Dublincore-Metadaten und der Code kann auf Anfrage unter CC-BY-Lizenz weitergegeben werden. Da die Nutzung auf eine kommerzielle Lösung beschränkt ist, wurde der Code nicht der Öffentlichkeit zugänglich gemacht.
+Das Plugin erzeugt MODS-, METS- und Dublincore-Metadaten und der Code kann auf Anfrage unter CC-BY-Lizenz weitergegeben werden.
 
 
 ### OJS-Latex-Unterstützung
