--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -34,7 +34,7 @@ Ursprünglich von Božana Bokan und Ronald Steffen (CeDis, FU Berlin) entwickelt
 Code Repository: https://github.com/ojsde/vgWort/tree/ojs-dev-3_2_1
 
 
-## OMP Weiterentwicklungen der UB Heidelberg für Fachinformationsdienste und Universitätsverlag
+## OMP Weiterentwicklungen für Fachinformationsdienste und Universitätsverlag
 
 *Christian Marsilius, Leonard Maylein, Christoph Otte, Nils Weiher, Daniela Wolf*
 
