--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -2,19 +2,20 @@
 
 ## Team Open Access und wissenschaftliches Publizieren, Universitätsbibliothek, Freie Universität Berlin
 
-Das Team *Open Access und wissenschaftliches Publizieren* der Universitätsbibliothek (Center für Digitale Systeme) der FU Berlin freut sich, Sie über die Veröffentlichung neuer Plugin-Versionen für OJS bzw. OMP 3.3 informieren zu können.
+Das Team *Open Access und wissenschaftliches Publizieren* der Universitätsbibliothek (Center für Digitale Systeme) der FU Berlin freut sich, Sie über neue Plugin-Versionen für OJS bzw. OMP 3.3 informieren zu können.
 
-!!! @Dulip Diesen Teil nur reinnehmen wenn das DNB-Plugin bis zur Veröffentlichung des Newsletters offiziell released wurde (ich hoffe wir kommen mit den Tests bis dahin durch) !!!
 ### **DNB Export Plugin**
 
-Diese Version des *DNB Export Plugins* für OJS 3.3 enthält wesentliche Neuerungen, die in enger Absprache mit der Deutschen Nationalbiblithek implemeniert wurden:
+Die neue Version (1.5) des *DNB Export Plugins* befindet sich derzeit in der letzten Testphase zusammen mit der DNB und Kollegen am IfADo Dortmund. Wir planen diese bis Ende März abgeschlossen zu haben. Die offizielle Release wird im [OJS Community Forum](https://forum.pkp.sfu.ca/) angekündigt.
+
+Die Version 1.5 des *DNB Export Plugins* für OJS 3.3 enthält wesentliche Neuerungen, die in enger Absprache mit der Deutschen Nationalbiblithek implemeniert wurden:
 
 - Ablieferung von ***verifizierten*** Orcis-IDs (zur Verifizierung muss das Orcid-Profile Plugin installiert sein)
 - Ablieferung von Begleitmaterial
 - Ablieferung von externen Fahnen (remote galleys)
 - integrierte Hilfe
 
-Bitte aktualisieren Sie Ihre Installationen und nutzen Sie in Zukunft folgende Plugin-Versionen zur Ablieferung an die DNB:
+Bitte denken Sie daran Ihre Installationen zu aktualisieren und nutzen Sie in Zukunft folgende Plugin-Versionen zur Ablieferung an die DNB:
 
 - Plugin-Version 1.3.2 für OJS 3.1.2
 - Plugin-Version 1.4.1 für OJS 3.2
