--- a/berichte/2021-01.md
+++ b/berichte/2021-01.md
@@ -1,3 +1,30 @@
+-   [OPTIMETA-Projekt von TIB und Universität
+    Münster](#optimeta-projekt-von-tib-und-universität-münster)
+-   [Universitätsbibliothek
+    Heidelberg](#universitätsbibliothek-heidelberg)
+ -   [Update des VG Wort Plugins für OJS
+     3.2](#update-des-vg-wort-plugins-für-ojs-3.2)
+ -   [OMP Weiterentwicklungen für Fachinformationsdienste und
+     Universitätsverlag](#omp-weiterentwicklungen-für-fachinformationsdienste-und-universitätsverlag)
+  -   [Kapitelseiten für OMP 3.4](#kapitelseiten-für-omp-3.4)
+  -   [Datacite Plugin für OMP 3.3](#datacite-plugin-für-omp-3.3)
+  -   [CitationStyleLanguage Plugin Portierung für OMP
+      3.4](#citationstylelanguage-plugin-portierung-für-omp-3.4)
+  -   [Kapitellizenzen für OMP](#kapitellizenzen-für-omp)
+-   [Technische Informationsbibliothek
+    (TIB)](#technische-informationsbibliothek-tib)
+ -   [Major Development Partner](#major-development-partner)
+ -   [OJS
+     Langzeitarchivierungs-Plugin](#ojs-langzeitarchivierungs-plugin)
+ -   [OJS-Latex-Unterstützung](#ojs-latex-unterstützung)
+ -   [Research Organization Registry(ROR)
+     Plugin](#research-organization-registryror-plugin)
+-   [Team Open Access und wissenschaftliches Publizieren,
+    Universitätsbibliothek, Freie Universität
+    Berlin](#team-open-access-und-wissenschaftliches-publizieren-universitätsbibliothek-freie-universität-berlin)
+ -   [DNB Export Plugin](#dnb-export-plugin)
+ -   [Shariff Plugin](#shariff-plugin)
+ -   [Slider Home Plugin](#slider-home-plugin)
 # OPTIMETA-Projekt von TIB und Universität Münster
 
 * Dr. Anette Cordts, Christian Hauschke, Gazi Yücel, Technische Informationsbibliothek
@@ -110,11 +137,11 @@ https://github.com/withanage/ror/
 
 
 
-## Team Open Access und wissenschaftliches Publizieren, Universitätsbibliothek, Freie Universität Berlin
+# Team Open Access und wissenschaftliches Publizieren, Universitätsbibliothek, Freie Universität Berlin
 
 Das Team *Open Access und wissenschaftliches Publizieren* der Universitätsbibliothek (Center für Digitale Systeme) der FU Berlin freut sich, Sie über neue Plugin-Versionen für OJS bzw. OMP 3.3 informieren zu können.
 
-### **DNB Export Plugin**
+### DNB Export Plugin
 
 Die neue Version (1.5) des *DNB Export Plugins* befindet sich derzeit in der letzten Testphase zusammen mit der DNB und Kollegen am IfADo Dortmund. Wir planen diese bis Ende März abgeschlossen zu haben. Die offizielle Release wird im [OJS Community Forum](https://forum.pkp.sfu.ca/) angekündigt.
 
@@ -133,13 +160,13 @@ Bitte denken Sie daran Ihre Installationen zu aktualisieren und nutzen Sie in Zu
 
 Die aktuellen Versionen des DNB-Export-Plugins finden Sie in unserem Github-Repo: <https://github.com/ojsde/dnb/releases>.
 
-### **Shariff Plugin**
+### Shariff Plugin
 
 Das *Shariff Plugin* implemeniert die von [Heise Online](https://github.com/heiseonline/shariff) zur Verfügung getellte, DSGVO-konforme Verbindung zu Social Media Plattformen für OJS, OMP und OPS. Die neue Plugin-Version für OJS/OMP/OPS 3.3.0 bietet nun auch die Möglichkeit die Reihenfolge der auf der Webseite angezeigten Shariff-Buttens festzulegen.
 
 Die aktuelle Version für OJS/OMP/OPS 3.3.0 finden Sie in der *OJS/OMP Plugin Gallery* oder auf Github: <https://github.com/ojsde/shariff/releases/tag/v3_3_0>
 
-### **Slider Home Plugin**
+### Slider Home Plugin
 
 Das *Slider Home Plugin* integriert eine Bilder-Slideshow (mit Textüberlagerungen) auf der OJS/OMP Homepage. In der neuen Plugin-Version für OJS/OMP 3.3.0 stehen erweiterete Konfigurationsmöglichkeiten zur Verfügung. Die Bilder der Slideshow können nun anhand der Höhe des Bildschirms skaliert werden. Ausserdem können die Geschwindigkeit und die Verzögerung der Bildübergänge eingestellt werden.
 
